# AskMira

./: .dockerignore  Dockerfile.fastapi  Dockerfile.streamlit  LICENSE  README.md  aacrao_debug.html  docker-compose.yml  pyproject.toml
FastAPI/: Dockerfile.fastapi  jwtauth.py  main.py
Scripts/: FCE Equivalency.xlsx  FCE Updates- Communication Board-1.xlsx  convert_excel_to_txt.py  convert_s3_docs_to_txt.py  ingest_to_pinecone.py  scrape_aacrao_edge.py
Streamlit/: AACROEDGE.py  AskMirabot.py  Dockerfile.streamlit  informationpage.py  landing.py  main.py
aacrao_output/AFRICA/: Algeria.md  Angola.md  Benin.md
